css/main.css
header {
    width: 90%;
    height: 100px;
    background-color: orchid;
}

article {
    width: 50%;
    height: 100px;
    background-color: steelblue;
}

aside, footer {
    width: 90%;
    height: 100px;
    background-color: green;
}
section {
    width: 300px;
    height: 450px;
    margin: 10px auto;
    border-radius: 15px;
    background-color: steelblue;
    font-size: 120px;
    text-align: right;
    font-family: "Arial Black", sans-serif;
    box-sizing: border-box;
    padding: 15px 40px 40px 40px;
    line-height: 140px;
}
form {
    height: 100px;
    margin: 0;
    display: inline;

}
.bottomLine {
    background-color: steelblue;
    border-bottom: 20px black solid;
}

.icon {
    width: 100px;
    height: 100px;
    border-radius: 10px;
}

